vprocharts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vprofile-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: k8sapp.vanluong203.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vproapp
                port:
                  number: 8080
